samples/_failures_safe/1761663387_1e344e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f03e4e42.c: In function ‘main’:
./samples/SAFE/__tmp_f03e4e42.c:182:45: error: expected ‘)’ at end of input
  182 |     printf("Tokens found: %d\n", token_count
      |           ~                                 ^
      |                                             )
./samples/SAFE/__tmp_f03e4e42.c:182:5: error: expected declaration or statement at end of input
  182 |     printf("Tokens found: %d\n", token_count
      |     ^~~~~~
